--- a/youtube/authtdd/package.json
+++ b/youtube/authtdd/package.json
@@ -14,6 +14,9 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
+    "factory-girl": "^5.0.4",
+    "faker": "^4.1.0",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^7.12.1",
     "sequelize": "^5.18.4"
   },
