--- a/bootcamp/gobarber/.env
+++ b/bootcamp/gobarber/.env
@@ -5,20 +5,24 @@ NODE_ENV=development
 APP_SECRET=bootcampbobarber
 
 # Database
-DB_HOST=
-DB_USER=
-DB_PASS=
-DB_NAME=
+DB_HOST=tuffi.db.elephantsql.com
+DB_USER=cnbsaqpj
+DB_PASS=u1dXcJg83d8MSHExWQMlrxuV2o7Wf4ix
+DB_NAME=cnbsaqpj
 
 # Mongo
-MONGO_URL=
+MONGO_URL=mongodb+srv://root:root@cluster0-zsbpu.mongodb.net/gobarber?retryWrites=true&w=majority
 
 # Redis
-REDIS_HOST=
-REDIS_PORT=
+REDIS_HOST=redis-19619.c13.us-east-1-3.ec2.cloud.redislabs.com
+REDIS_PORT=19619
+REDIS_PASS=root
 
 # Email
 MAIL_HOST=smtp.mailtrap.io
 MAIL_PORT=2525,
 MAIL_USER=6ba2be2b25b39e
 MAIL_PASS=b4cff5fab614a7
+
+# Sentry
+SENTRY_DSN=https://998ac0068008494d9dc458bff2ad8240@sentry.io/1766397
