--- a/bootcamp/gobarber/package.json
+++ b/bootcamp/gobarber/package.json
@@ -17,6 +17,7 @@
     "express-async-errors": "^3.1.1",
     "express-handlebars": "^3.1.0",
     "jsonwebtoken": "^8.5.1",
+    "mongodb": "^3.3.2",
     "mongoose": "^5.7.1",
     "multer": "^1.4.2",
     "nodemailer": "^6.3.0",
