--- a/bootcamp/gobarber/frontend/package.json
+++ b/bootcamp/gobarber/frontend/package.json
@@ -4,10 +4,13 @@
   "private": true,
   "dependencies": {
     "history": "^4.10.1",
+    "polished": "^3.4.1",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0"
+    "react-scripts": "3.2.0",
+    "reactotron-react-js": "^3.3.4",
+    "styled-components": "^4.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
